fix: fixing bugs

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
       <div class="search-results">
         <ul class="results">
+					<a href="#5ed6604591c37cdc054bcfcc">RECIPE</a>
 					<!-- <a href="#"></a> -->
           <!-- 
           <li class="preview">
